# src/server/api/routes/api-router.js
@@ -14,6 +14,7 @@ const createBatchRouter = require('./create-batch.router');
 const getBatchRouter = require('./batches.router');
 const batchDefaultValuesRouter = require('./batch-default-values.router');
 const deleteSpecificBatchDataRouter = require('./delete-specfic-batch.router');
+const createCropRouter = require('./create-crop.router');
 
 // swagger-ui-express
 const swaggerDocument = require('../../config/swagger.json');
@@ -34,5 +35,6 @@ router.use('/create-batch', createBatchRouter);
 router.use('/batch', getBatchRouter);
 router.use('/batch-default-values', batchDefaultValuesRouter);
 router.use('/delete-specific-batch', deleteSpecificBatchDataRouter);
+router.use('/create-crop', createCropRouter);
 
 module.exports = router;
